--- a/style.css
+++ b/style.css
@@ -3,8 +3,8 @@
     font-style: normal;
     font-weight: 400;
     font-display: swap;
-    src: local(''), url('../fonts/roboto-regular-webfont.woff2') format('woff2'),
-        url('../fonts/roboto-regular-webfont.woff') format('woff');
+    src: local(''), url('./fonts/roboto-regular-webfont.woff2') format('woff2'),
+        url('./fonts/roboto-regular-webfont.woff') format('woff');
 }
 
 :root {
@@ -19,6 +19,7 @@
 
 * {
     box-sizing: border-box;
+    font-family: var(--font);
 }
 
 *:focus-visible {
@@ -44,7 +45,6 @@ body,
 p {
     padding: 0;
     margin: 0;
-    font-family: 'Roboto';
 }
 
 a {
